--- a/spa/src/index.html
+++ b/spa/src/index.html
@@ -6,6 +6,30 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title> TGOM </title>
 
+	<style>
+		
+		/*** TODO: Put CSS code in separate file. ***/
+		
+		/* Code for only showing the page with the class "current-page". */
+		main > .page{
+			display: none;
+		}
+		
+		main > .page.current-page{
+			display: block;
+		}
+		
+		/* Code for hiding elements depending on if the user is logged in or not. */
+		.is-logged-in .if-is-logged-out{
+			display: none;
+		}
+		
+		.is-logged-out .if-is-logged-in{
+			display: none;
+		}
+		
+	</style>
+
 
 	<script>
 
@@ -168,8 +192,6 @@
 
 			})
 
-
-
 			document.getElementById("create-feedback-form").addEventListener("submit", async function(event){
 				
 				event.preventDefault()
@@ -254,7 +276,7 @@
 		
 			
 			window.addEventListener("popstate", function(event){
-			
+			preventDefault()
 			const uri = location.pathname
 			hideCurrentPage()
 			showPage(uri)
@@ -347,8 +369,84 @@
 	</script>
 
 </head>
-<body>
-	<div>
-		<h1> TGOM	</h1>
-	</div>
+<body class="is-logged-out">
+
+	
+	<header>
+		My Site
+	</header>
+	
+	<nav>
+		<ul>
+			<li><a href="/">Home</a></li>
+			<li><a href="/feedbacks">Humans</a></li>
+			<li class="if-is-logged-in"><a href="/create-feedback">Create feedback</a></li>
+			<li class="if-is-logged-out"><a href="/login">Login</a></li>
+			<li class="if-is-logged-out"><a href="/register">Register</a></li>
+
+		</ul>
+	</nav>
+	
+	<main>
+		
+		<div class="page" id="home-page">
+			<h1>Home</h1>
+			<p>Welcome to this site!</p>
+			<p>Go to <a href="/about">About page</a>.</p>
+		</div>
+		
+		
+		<div class="page" id="regester-page">
+			<h1>Create</h1>
+			<form action=""  name="register">
+				<div class="form-group has-success">
+					<label class="form-label" for="input-example-1">Name:</label>
+					<input class="form-input" type="text" value="{{name}}" name="name" placeholder="Name" required>
+				</div>
+				<div class="form-group has-success">
+					<label class="form-label" for="input-example-1">Username:</label>
+					<input class="form-input" type="text" value = "{{username}}" name="username" placeholder="Username" required>
+				</div>
+				<div class="form-group">
+					<label class="form-label" for="input-example-1">Password:</label>
+					<input class="form-input" type="password" value="{{password}}" name="password" placeholder="Password" required>
+				</div>      
+				<div class="form-group">
+					<label class="form-label" for="input-example-1">Repeat Password:</label>
+					<input class="form-input" type="password" value= "{{confirmPassword}}" name="repeat_password" placeholder="Repeat Password" required>
+				</div> 
+					<button class="btn" type="submit" value="register">Register</button>
+			</form>
+		</div>
+		
+		<div class="page" id="login-page">
+			<h1>Login</h1>
+			<form action="" id="login-form">
+				<div>
+					Username: <input type="text" id="username">
+				</div>
+				<div>
+					Password: <input type="password" id="password">
+				</div>
+				<input type="submit" value="Login">
+			</form>
+		</div>
+
+		<div class="page" id="create-feedback-page">
+			
+		</div>	
+		
+		
+		<div class="page" id="all-feedbacks-page"></div>
+		
+		<div class="page" id="feedback-page"></div>
+		
+		<div class="page" id="not-found-page">
+			<h1>Not Found</h1>
+		</div>
+		
+	</main>
+	
+	
 </body>
+</html>
