--- a/spa/src/index.html
+++ b/spa/src/index.html
@@ -6,11 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="./spa.css" rel="stylesheet" type="text/css" >
 		<title> TGOM </title>
-
 		<script src="./app.js"> </script>
-
-		
-
 	</head>
 	<body class="is-logged-out">
 
@@ -44,23 +40,23 @@
 			<div class="page" id="register-page">
 				<h1>Register</h1>
 				<form action="" id="register-form"  name="register">
-					<div class="form-group has-success">
-						<label class="form-label" for="input-example-1">Name:</label>
-						<input class="form-input" type="text"  id="name" placeholder="Name" required>
+					<div >
+						<label>Name:</label>
+						<input type="text"  id="name" placeholder="Name" required>
 					</div>
-					<div class="form-group has-success">
-						<label class="form-label" for="input-example-1">Username:</label>
-						<input class="form-input" type="text" id="username" placeholder="Username" required>
+					<div>
+						<label >Username:</label>
+						<input  type="text" id="username" placeholder="Username" required>
 					</div>
-					<div class="form-group">
-						<label class="form-label" for="input-example-1">Password:</label>
-						<input class="form-input" type="password"  id="password" placeholder="Password" required>
+					<div >
+						<label>Password:</label>
+						<input type="password"  id="password" placeholder="Password" required>
 					</div>      
-					<div class="form-group">
-						<label class="form-label" for="input-example-1">Repeat Password:</label>
-						<input class="form-input" type="password"  id="repeat_password" placeholder="Repeat Password" required>
+					<div >
+						<label>Repeat Password:</label>
+						<input type="password"  id="repeat_password" placeholder="Repeat Password" required>
 					</div> 
-						<button class="btn" type="submit" value="register">Register</button>
+						<button type="submit" value="register">Register</button>
 				</form>
 			</div>
 			
@@ -85,11 +81,11 @@
 					<div>
 						Game: <input type="name" id="game" >
 					</div>
-					<div id="update_textarea">
-						Content: <textarea class="update_textarea" type="text" id="content" rows="4" cols="60" > </textarea>
+					<div >
+						Content: <textarea type="text" id="content" rows="4" cols="60" > </textarea>
 					</div>
-					<div id="submit_update">
-						<input class="submit_update_btn" type="submit" name="create-btn" value="CREATE">
+					<div >
+						<input type="submit" name="create-btn" value="CREATE">
 					</div>	
 				</form>
 			</div>	
@@ -102,11 +98,11 @@
 					<div>
 						New Game: <input type="name" id="newGame" >
 					</div>
-					<div id="update_textarea">
-						New Content: <textarea class="update_textarea" type="text" id="newContent" rows="4" cols="60" > </textarea>
+					<div>
+						New Content: <textarea  type="text" id="newContent" rows="4" cols="60" > </textarea>
 					</div>
-					<div id="submit_update">
-						<input class="submit_update_btn" type="submit" name="update-btn" value="UPDATE">
+					<div >
+						<input  type="submit" name="update-btn" value="UPDATE">
 					</div>	
 				</form>
 			</div>	
