sequelize is back

--- a/spa/src/index.html
+++ b/spa/src/index.html
@@ -101,6 +101,9 @@
 					<div>
 						New Content: <textarea  type="text" id="newContent" rows="4" cols="60" > </textarea>
 					</div>
+					<div>
+						<input type="hidden" id="authorId" >
+					</div>
 					<div >
 						<input  type="submit" name="update-btn" value="UPDATE">
 					</div>	
